# mcap_experiments

./: Cargo.toml  out.mcap
src/: main.rs  reader.rs
